# pgrand

./: Cargo.toml  oid_list.txt  pgrand.control  random_fdw.control  readme.md
examples/: test.rs
sql/: demo.sql  test_leak.sql
src/: lib.rs
src/fdw/: mod.rs
src/tableam/: functions.rs  mod.rs
src/utils/: data.rs  guc.rs  mod.rs
