[package]
name = "pgrand"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "0.11.3"
rand_chacha = "0.3.0"
fake = { version = "2.9.2", features = ["rust_decimal", "time", "uuid"] }
rand = { version = "0.8.5", features = [] }
serde_json = {version = "1.0"}
num = { version = "0.4.1"}
num-traits = "0.2.18"

[dev-dependencies]
pgrx-tests = "0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
